Update Vikunja iframe, add options to select which info to show
